[gd_scene load_steps=14 format=3 uid="uid://thwpr8h4nhin"]

[ext_resource type="Texture2D" uid="uid://sdqwgj8p7n4g" path="res://icon.svg" id="1_g6svw"]
[ext_resource type="Script" uid="uid://dc86irbvkwbxc" path="res://backroom/backroom.gd" id="1_grv5e"]

[sub_resource type="ButtonGroup" id="ButtonGroup_grv5e"]
allow_unpress = true

[sub_resource type="Theme" id="Theme_grv5e"]

[sub_resource type="Curve2D" id="Curve2D_grv5e"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 724, 427, 0, 0, 0, 0, 997, 427)
}
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_grv5e"]
size = Vector2(126.586426, 126.666626)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_irnpm"]
size = Vector2(129.88434, 128)

[sub_resource type="Animation" id="Animation_irnpm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpoolIndicator:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpoolIndicator2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_4h6lf"]
resource_name = "fast_spin"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpoolIndicator:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -6.283185307179586]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpoolIndicator2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -6.283185307179586]
}

[sub_resource type="Animation" id="Animation_kqmtr"]
resource_name = "miss_spin"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpoolIndicator:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.1344640137963142]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpoolIndicator2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.1344640137963142]
}

[sub_resource type="Animation" id="Animation_grv5e"]
resource_name = "spin"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpoolIndicator:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -6.283185307179586]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpoolIndicator2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -6.283185307179586]
}

[sub_resource type="Animation" id="Animation_2d3aw"]
resource_name = "spin_recover"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpoolIndicator:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.1344640137963142, -6.283185307179586]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpoolIndicator2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.1344640137963142, -6.283185307179586]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4h6lf"]
_data = {
&"RESET": SubResource("Animation_irnpm"),
&"fast_spin": SubResource("Animation_4h6lf"),
&"miss_spin": SubResource("Animation_kqmtr"),
&"spin": SubResource("Animation_grv5e"),
&"spin_recover": SubResource("Animation_2d3aw")
}

[node name="Backroom" type="Node2D"]
script = ExtResource("1_grv5e")

[node name="BrokenTape" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 0, 0, 1)
position = Vector2(658, 640)
rotation = -3.1415925
texture = ExtResource("1_g6svw")

[node name="FixTapeButton" type="Button" parent="."]
visible = false
offset_left = 603.0
offset_top = 662.0
offset_right = 713.0
offset_bottom = 693.0
text = "Fix Tape (F)"

[node name="TV" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="TV"]
position = Vector2(953.00006, 166.37503)
scale = Vector2(3.216797, 1.8496099)
texture = ExtResource("1_g6svw")

[node name="VCR" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="VCR"]
position = Vector2(810.9999, 438.00003)
scale = Vector2(5.886719, 1.5996095)
texture = ExtResource("1_g6svw")

[node name="SpoolIndicator" type="Sprite2D" parent="VCR"]
position = Vector2(784, 361.37503)
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_g6svw")

[node name="SpoolIndicator2" type="Sprite2D" parent="VCR"]
position = Vector2(883, 359.37503)
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_g6svw")

[node name="TrackLabel" type="Label" parent="VCR"]
offset_left = 513.0
offset_top = 353.37503
offset_right = 579.0
offset_bottom = 376.37503
text = "Tracking"

[node name="TrackTutorialLabel" type="Label" parent="VCR"]
offset_left = 388.0
offset_top = 306.37503
offset_right = 646.0
offset_bottom = 329.37503
text = "Use 1-5 number keys for Tracking"

[node name="DialTutorialLabel2" type="Label" parent="VCR"]
offset_left = 975.0
offset_top = 304.37503
offset_right = 1233.0
offset_bottom = 327.37503
text = "Use <- and -> arrow keys for dial"

[node name="DialTutorialLabel3" type="Label" parent="VCR"]
offset_left = 693.0
offset_top = 543.375
offset_right = 951.0
offset_bottom = 566.375
text = "Hit Spacebar to get ticker catch"

[node name="TuningLabel" type="Label" parent="VCR"]
offset_left = 1063.0
offset_top = 352.37503
offset_right = 1129.0
offset_bottom = 375.37503
text = "Tuner"

[node name="RewindButton" type="Button" parent="VCR"]
offset_left = 746.0
offset_top = 499.37503
offset_right = 899.0
offset_bottom = 530.375
text = "Rewind (Enter)"

[node name="Tracking" type="HBoxContainer" parent="VCR"]
offset_left = 479.0
offset_top = 388.37503
offset_right = 670.0
offset_bottom = 443.37503

[node name="1" type="Button" parent="VCR/Tracking"]
custom_minimum_size = Vector2(35, 10)
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_grv5e")
text = "1
"

[node name="2" type="Button" parent="VCR/Tracking"]
custom_minimum_size = Vector2(35, 10)
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_grv5e")
text = "2
"

[node name="3" type="Button" parent="VCR/Tracking"]
custom_minimum_size = Vector2(35, 10)
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_grv5e")
text = "3"

[node name="4" type="Button" parent="VCR/Tracking"]
custom_minimum_size = Vector2(35, 10)
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_grv5e")
text = "4"

[node name="5" type="Button" parent="VCR/Tracking"]
custom_minimum_size = Vector2(35, 10)
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_grv5e")
text = "5"

[node name="DialLight" type="ColorRect" parent="VCR"]
offset_left = 1114.0
offset_top = 355.37503
offset_right = 1124.0
offset_bottom = 375.37503
color = Color(0, 0, 0, 1)

[node name="Dial" type="Node2D" parent="VCR"]
position = Vector2(1082, 429.37503)

[node name="Sprite2D" type="Sprite2D" parent="VCR/Dial"]
scale = Vector2(0.6875, 0.65625)
texture = ExtResource("1_g6svw")

[node name="ColorRect" type="ColorRect" parent="VCR/Dial/Sprite2D"]
offset_left = -2.9091582
offset_top = -59.4286
offset_right = 4.363547
offset_bottom = 9.142872
color = Color(1, 0.06666667, 0.023529412, 1)

[node name="Ticker" type="Node2D" parent="VCR"]

[node name="TrackBorder" type="ColorRect" parent="VCR/Ticker"]
offset_left = 698.0
offset_top = 429.37503
offset_right = 980.0
offset_bottom = 456.37503
theme = SubResource("Theme_grv5e")
color = Color(0, 0, 0, 1)

[node name="Track" type="ColorRect" parent="VCR/Ticker"]
offset_left = 701.0
offset_top = 433.37503
offset_right = 977.0
offset_bottom = 453.37503
theme = SubResource("Theme_grv5e")

[node name="Path2D" type="Path2D" parent="VCR/Ticker"]
position = Vector2(-22, 17.37503)
curve = SubResource("Curve2D_grv5e")

[node name="HitzonePathFollow2D" type="PathFollow2D" parent="VCR/Ticker/Path2D"]
position = Vector2(833.19836, 427)
progress = 109.200005

[node name="HitZone" type="Sprite2D" parent="VCR/Ticker/Path2D/HitzonePathFollow2D"]
modulate = Color(0.78419125, 0.9587417, 0.23863629, 1)
scale = Vector2(0.05, 0.328)
texture = ExtResource("1_g6svw")

[node name="Area2D" type="Area2D" parent="VCR/Ticker/Path2D/HitzonePathFollow2D/HitZone"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VCR/Ticker/Path2D/HitzonePathFollow2D/HitZone/Area2D"]
position = Vector2(0.33764648, 0.666626)
scale = Vector2(1, 0.99999994)
shape = SubResource("RectangleShape2D_grv5e")

[node name="TickPathFollow2D" type="PathFollow2D" parent="VCR/Ticker/Path2D"]
position = Vector2(724, 427)
loop = false

[node name="Tick" type="Sprite2D" parent="VCR/Ticker/Path2D/TickPathFollow2D"]
scale = Vector2(0.05, 0.5390939)
texture = ExtResource("1_g6svw")

[node name="Area2D" type="Area2D" parent="VCR/Ticker/Path2D/TickPathFollow2D/Tick"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VCR/Ticker/Path2D/TickPathFollow2D/Tick/Area2D"]
position = Vector2(-0.9423828, 0)
scale = Vector2(1.0000004, 1)
shape = SubResource("RectangleShape2D_irnpm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="VCR"]
libraries = {
&"": SubResource("AnimationLibrary_4h6lf")
}

[connection signal="pressed" from="FixTapeButton" to="." method="_on_fix_tape_button_pressed"]
[connection signal="pressed" from="VCR/RewindButton" to="." method="_on_rewind_button_pressed"]
[connection signal="area_entered" from="VCR/Ticker/Path2D/HitzonePathFollow2D/HitZone/Area2D" to="." method="_on_hitzone_area_2d_area_entered"]
[connection signal="area_exited" from="VCR/Ticker/Path2D/HitzonePathFollow2D/HitZone/Area2D" to="." method="_on_hitzone_area_2d_area_exited"]
